Add the ability to ignore some flaky tests